# src/routes/developers.route.ts
@@ -2,7 +2,7 @@ import { Router } from 'express';
 import { CreateDeveloperDto } from '@/dtos/developers.dto';
 import { Routes } from '@interfaces/routes.interface';
 import validationMiddleware from '@middlewares/validation.middleware';
-import DevelopersController from '@/controllers/developers.controller';
+import { DevelopersController } from '@/controllers/developers.controller';
 
 class DevelopersRoute implements Routes {
   public path = '/developers';
@@ -15,6 +15,7 @@ class DevelopersRoute implements Routes {
 
   private initializeRoutes() {
     this.router.get(`${this.path}`, this.developersController.getDevelopers);
+    this.router.get(`${this.path}/filter?`, this.developersController.filterDevelopers);
     this.router.get(`${this.path}/:id`, this.developersController.getDeveloperById);
     this.router.post(`${this.path}`, validationMiddleware(CreateDeveloperDto, 'body'), this.developersController.createDeveloper);
     this.router.put(`${this.path}/:id`, validationMiddleware(CreateDeveloperDto, 'body', true), this.developersController.updateDeveloper);
@@ -22,4 +23,4 @@ class DevelopersRoute implements Routes {
   }
 }
 
-export default DevelopersRoute;
+export { DevelopersRoute };
