# src/server.ts
@@ -1,6 +1,6 @@
 import App from '@/app';
 import IndexRoute from '@routes/index.route';
-import DevelopersRoute from '@/routes/developers.route';
+import { DevelopersRoute } from '@/routes/developers.route';
 import validateEnv from '@utils/validateEnv';
 
 validateEnv();
